--- a/app/views/layouts/_social_buttons.html.haml
+++ b/app/views/layouts/_social_buttons.html.haml
@@ -1,4 +1,4 @@
-.row-fluid.social_bar
+.row.social_bar
 	%div.social_button
 		%a.twitter-share-button{"data-count" => "vertical", "data-text" => twitter_message, "data-via" => "smilekus", "data-lang" => "en", "data-related" => "smilekus", :href => "https://twitter.com/share"} Tweet
 	%div.social_button
