--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -27,27 +27,16 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff8cf08c', endColorstr='#ff8cf08c', GradientType=0);
 }
 
-.navbar .brand {
+.navbar .navbar-brand {
   float: left;
-  display: block;
-  padding: 5px 20px 15px;
-  margin-left: -20px;
   font-size: 50px;
   font-weight: 200;
-  color: #777777;
-  
 }
 
 .content {
   background-color: #FFFFFF;
   padding: 20px;
   margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-  -webkit-border-radius: 0 0 6px 6px;
-  -moz-border-radius: 0 0 6px 6px;
-  border-radius: 0 0 6px 6px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-  box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
 
 .quote{
