--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,5 +1,5 @@
-.row_fluid
+.row
 	%h4 Comments
 	= form_for [@ku, @comment] do |f|
-		=f.text_area :body, class: "span4", rows: 3
+		=f.text_area :body, class: "col-md-4", rows: 3
 		=f.submit "leave a comment", class: "btn pull-right"
