--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,5 +1,5 @@
 <% if flash[:error] %>
-  <div class="alert alert-error">
+  <div class="alert alert-danger">
     <%= flash[:error] %>
     <a class="close" data-dismiss="alert">&#215;</a>
   </div>
