--- a/app/views/layouts/front.html.haml
+++ b/app/views/layouts/front.html.haml
@@ -23,4 +23,5 @@
               = yield
         %footer
           = render 'layouts/footer'
-    = render 'layouts/social_scripts'
+    - if Rails.env.production?
+      = render 'layouts/social_scripts'
