--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,5 +22,6 @@
           = render 'layouts/footer'
       / ! end of .container
     / ! end of #main
-    = render 'layouts/ga' if Rails.env.production?
-    = render 'layouts/social_scripts'
+    - if Rails.env.production?
+      = render 'layouts/ga'
+      = render 'layouts/social_scripts'
