--- a/app/views/kus/edit.html.haml
+++ b/app/views/kus/edit.html.haml
@@ -2,7 +2,7 @@
 	.row
 		.col-md-5
 			.row
-				= image_tag @story.large_cover
+				= image_tag @story.large_cover, class: "story_image"
 			.row
 				%h2= @story.title
 				.well.col-md-10
