password resets updates

--- a/app/views/forgot_passwords/new.html.haml
+++ b/app/views/forgot_passwords/new.html.haml
@@ -3,7 +3,7 @@
     %header
       %h1 Password trouble?
       %br
-      %p Don't cry, dry your eyes! We'll send you an email with a link for you to reset your password. Just submit your registration email address below.
+      %p Don't cry, dry your eyes! We'll send you an email with a link for you to reset your password. Just submit your account email address below.
       %br
     %fieldset.form-group
       = label_tag :email, "Email Address"
