--- a/app/views/password_resets/expired.html.haml
+++ b/app/views/password_resets/expired.html.haml
@@ -1,6 +1,6 @@
 %section.invalid_token.container
   .row
-    .span6.offset1
+    .col-md-6.col-md-offset-1
       %h1 Sorry, that link is expired
       %br
       %p For security purposes, we must expire password reset links after a certain amount of time.  You can generate another reset link by filling out the <a href="/forgot_password">forgot password form</a>.
