--- a/app/views/password_resets/show.html.haml
+++ b/app/views/password_resets/show.html.haml
@@ -1,12 +1,12 @@
 %section.container
   .row
-    .span10.offset1
+    .col-md-6.col-md-offset-1
       =form_tag password_resets_path do
         %header
           %h1 Reset Your Password
-        %fieldset
-          =label_tag :password, "New Password"
-          =text_field_tag :password
+        %fieldset.form-group
+          =label_tag :password, "Create a new password"
+          =text_field_tag :password, '', class: 'form-control'
           =hidden_field_tag :token, @token
         %fieldset.action
           %input(type="submit" value="Reset Password" class="btn")
