--- a/app/views/posts/_sidebar.html.haml
+++ b/app/views/posts/_sidebar.html.haml
@@ -1,5 +1,5 @@
 .row-fluid
-	.span8.offset2
+	.col-md-10.col-md-offset-2
 		- if logged_in?
 			%h2= "Hey #{current_user.username},"
 			.p As the saying goes, writing is 1% inspiration and 99% perspiration.  You're here, sitting down and thinking about writing.  It's a good start...
@@ -7,8 +7,8 @@
 			.p But you can do so much more.  Stop thinking about writing and start doing!
 			%br
 			.row
-				.span8.offset2
-					= link_to "Start a story!", new_story_path, class: "btn btn-warning btn-block"
+				.center
+					= link_to "Start a story!", new_story_path, class: "btn btn-info"
 		- else
 			%h2 What is Smileku?
 			.p We're a community of writers dedicated to growing creatively. Writers on Smileku collaborate on stories, challenging each other to think on our feet and write great stories.  
@@ -16,8 +16,8 @@
 			.p Smileku is open to writers of all background.  If this sounds like fun, join us!
 			%br
 			.row
-				.span8.offset2
-					= link_to "Join the community!", registration_path, class: "btn btn-warning btn-block"
+				.center
+					= link_to "Join the community!", registration_path, class: "btn btn-info"
 		%br
 		.center
 			= render 'layouts/twitter_follow'
