--- a/app/assets/stylesheets/front_page.css.scss
+++ b/app/assets/stylesheets/front_page.css.scss
@@ -22,7 +22,7 @@ body.front-page {
 
 .giant {
   font-size: 750%;
-  padding-top: 45px;
+  padding-top: 20px;
 }
 
 .front-left > h1 {
@@ -31,7 +31,7 @@ body.front-page {
 }
 
 .front-right {
-  padding-top: 150px;
+  vertical-align: middle;
   color: #FFFFFF;
   font-size: 130%;
 }
@@ -46,7 +46,7 @@ body.front-page {
 }
 
 .front-post {
-  max-width: 250px;
+  max-width: 260px;
   padding-right: 11px;
   float: left;
 }
