--- a/app/views/users/_followers_sidebar.html.haml
+++ b/app/views/users/_followers_sidebar.html.haml
@@ -1,20 +1,20 @@
 - unless @user.listed.empty?
 	%h4= link_to 'Story List', listings_user_path(@user)
-	.row-fluid
+	.row
 		- @user.listed.each do |u|
-			.span3.no-space
-				= link_to "#{image_tag u.large_cover.preview}".html_safe, url_for(u)
+			.col-md-3.no-space
+				= link_to "#{image_tag u.large_cover.preview, class: "story_image"}".html_safe, url_for(u)
 %br
 - unless @user.following.empty?
 	%h4= link_to 'Following', following_user_path(@user)
-	.row-fluid
+	.row
 		- @user.following.each do |u|
-			.span3.no-space
-				= link_to "#{image_tag u.photo.preview}".html_safe, user_path(u)
+			.col-md-3.no-space
+				= link_to "#{image_tag u.photo.preview, class: "story_image"}".html_safe, user_path(u)
 %br
 - unless @user.followers.empty?
 	%h4= link_to 'Followers', followers_user_path(@user)
-	.row-fluid
+	.row
 		- @user.followers.each do |u|
-			.span3.no-space
-				= link_to "#{image_tag u.photo.preview}".html_safe, user_path(u)
+			.col-md-3.no-space
+				= link_to "#{image_tag u.photo.preview, class: "story_image"}".html_safe, user_path(u)
