--- a/app/views/users/listings.html.haml
+++ b/app/views/users/listings.html.haml
@@ -1,8 +1,8 @@
 %h2= "#{@user.username}'s Story List"
 %br
 - @user.listed.each do |u|
-	.row-fluid
-		.span1.offset1
-			%h5= link_to image_tag("#{u.large_cover.preview}"), url_for(u)
-		.span6.row10
+	.row
+		.col-md-1.col-md-offset-1
+			%h5= link_to image_tag("#{u.large_cover.preview}", class: "story_image"), url_for(u)
+		.col-md-6.row10
 			%h4= link_to u.title, url_for(u)
