--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,11 +1,11 @@
 - meta :title => "#{@user.username}'s Smileku Profile", :description => "#{@user.bio}."
 .container
-	.row-fluid
-		.span8
-			.row-fluid
-				.span4
-					= image_tag @user.photo.normal
-				.span8
+	.row
+		.col-md-8
+			.row
+				.col-md-4
+					= image_tag @user.photo.normal, class: "story_image"
+				.col-md-8
 					%h1 
 						= @user.username
 						= render 'follow_form'
@@ -17,29 +17,29 @@
 					%p.italic= @user.bio
 			%hr
 			%h3 Recent Kus
-			.row-fluid
-				.span10.offset1
+			.row
+				.col-md-10.col-md-offset-1
 					- @kus.each do |k|
 						.row.row10
-							.span2
-								=link_to "#{image_tag k.story.large_cover.preview}".html_safe, ku_path(k)
-							.span10
+							.col-md-2
+								=link_to "#{image_tag k.story.large_cover.preview, class: "story_image"}".html_safe, ku_path(k)
+							.col-md-10
 								%h5= "#{link_to k.story.title, ku_path(k)} Ku ##{k.number_in_story}".html_safe
 								%p= "#{k.comments.count} Comments | #{k.vote_count} Votes"
-		.span4
+		.col-md-4
 			%h4 Activity
-			.row-fluid.row10
-				.span6.stats-box
+			.row.row10
+				.col-md-6.stats-box
 					%h2= @user.stories.count
 					%h4 stories
-				.span6.stats-box
+				.col-md-6.stats-box
 					%h2= @user.kus.count
 					%h4 kus
-			.row-fluid
-				.span6.stats-box
+			.row
+				.col-md-6.stats-box
 					%h2= @user.is_followed.count
 					%h4 followers
-				.span6.stats-box
+				.col-md-6.stats-box
 					%h2= @user.is_follower.count
 					%h4 following
 			%hr
