--- a/app/views/statics/front.html.haml
+++ b/app/views/statics/front.html.haml
@@ -5,7 +5,7 @@
 			%h1 Short bursts of creativity <br/> to help you write more <br/> and grow as a writer
 		.col-md-4.col-md-offset-1.front-right
 			- if logged_in?
-				= link_to "Start a story", new_story_path, class: "btn btn-large btn-block"
+				= link_to "Start a story", new_story_path, class: "btn btn-info btn-large btn-block"
 			- else
 				= link_to "Sign up now", registration_path, class: "btn btn-info btn-large btn-block"
 				= link_to "Login", login_path, class: "btn btn-default btn-large btn-block"
