--- a/app/views/kus/new.html.haml
+++ b/app/views/kus/new.html.haml
@@ -22,8 +22,8 @@
 				=f.text_area :body, class: "wysihtml5 form-control", rows: 15
 				:javascript
 					$(document).ready(function(){
-						$('.wysihtml5').each(function(i, elem) {
-							$(elem).wysihtml5();
+						$('.wysihtml5').wysihtml5({
+							"image": false
 						});
 					});
 				%br
