--- a/app/views/stories/index.html.haml
+++ b/app/views/stories/index.html.haml
@@ -16,7 +16,12 @@
           %hr.short-hr
       .row
         %h2 Recent Stories
-        - @stories.each do |story|
+        - @recent_stories.each do |story|
+          .story
+            = link_to image_tag("#{story.large_cover.preview}", class: "story_image"), story_path(story)
+            %p= link_to "#{story.truncated_title} by #{story.user.username}", story_path(story)
+        %h2 Popular Stories
+        - @top_stories.each do |story|
           .story
             = link_to image_tag("#{story.large_cover.preview}", class: "story_image"), story_path(story)
             %p= link_to "#{story.truncated_title} by #{story.user.username}", story_path(story)
