--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -6,10 +6,7 @@
 				%span.icon-bar
 				%span.icon-bar
 				%span.icon-bar
-			- if logged_in?
-				=link_to "&infin;".html_safe, root_path, :class => "navbar-brand"
-			- else
-				=link_to "&infin;".html_safe, front_path, :class => "navbar-brand"
+			=link_to "&infin;".html_safe, home_path, :class => "navbar-brand"
 		.nav-collapse#collapse
 			- if logged_in?
 				%ul.nav.navbar-nav.navbar-right
