--- a/app/views/statics/home.html.haml
+++ b/app/views/statics/home.html.haml
@@ -25,5 +25,7 @@
           .story
             = link_to image_tag("#{story.large_cover.preview}", class: "story_image"), story_path(story)
             %p= link_to "#{story.truncated_title} by #{story.user.username}", story_path(story)
+      .row
+        %h4= link_to 'More stories >>', stories_path
     .col-md-3
       = render 'layouts/sidebar'
