--- a/app/views/stories/index.html.haml
+++ b/app/views/stories/index.html.haml
@@ -1,1 +1,5 @@
-%h1 BOOM
+%h1 Stories being written
+- @stories.each do |story|
+  .story
+    = link_to image_tag("#{story.large_cover.preview}", class: "story_image"), story_path(story)
+    %p= link_to "#{story.truncated_title} by #{story.user.username}", story_path(story) 
