--- a/app/views/app_mailer/welcome_email.html.erb
+++ b/app/views/app_mailer/welcome_email.html.erb
@@ -1,15 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
- <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>You've joined Smileku, so what now?</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  </head>
-  <body>
-    <h1>Welcome to Smileku, <%= @user.username %></h1>
-    <p>Thank you for joining us at our small corner of the internet. Whether you're published and famous or aspiring to greatness, we hope Smileku will be a place for you to write more often and have fun doing it.</p>
-    <p>Feel free to <a href="mailto:contact@smileku.com?Subject=New%20member%20question" target="_top">drop us a line</a> if you have any questions.</p>
-    <p><%= link_to 'Login and start writing!', login_url(:utm_source => "appmailer", :utm_medium => "email", :utm_campaign => "welcome") %></p>
-    <p>- Team Smileku</p>
-  </body>
-</html>
+<div style="font-weight: bold; font-size: 18px; line-height: 24px; color: #D03C0F">
+Welcome to Smileku, <%= @user.username %>
+</div><br>
+
+Thank you for joining us at our small corner of the internet. Whether you're published and famous or aspiring to greatness, we hope Smileku will be a place for you to write more often and have fun doing it.
+<br><br>
+
+<div style="font-weight: bold; font-size: 18px; line-height: 24px; color: #D03C0F">
+<%= link_to 'Login and start writing!', login_url(:utm_source => "appmailer", :utm_medium => "email", :utm_campaign => "welcome") %>
+</div>
+<br>
+
+- Team Smileku
+<br><br>
