--- a/app/views/story_mailer/edit_ku_email.html.erb
+++ b/app/views/story_mailer/edit_ku_email.html.erb
@@ -2,12 +2,12 @@
 	<tbody>
     <tr>
       <td style="font-size:11px;font-weight:italic;">
-        <%= link_to "Re-visit Your Ku", ku_url(@ku, :utm_source => "appmailer", :utm_medium => "email", :utm_campaign => "edit_ku") %>
+        <%= link_to "Visit Your Ku", ku_url(@ku, :utm_source => "appmailer", :utm_medium => "email", :utm_campaign => "edit_ku") %>
       </td>
     </tr>
 		<tr>
 			<td style="font-weight: bold; font-size: 16px; line-height: 24px; color: #D03C0F">
-				<%= "It's a good time to edit '#{@ku.story.title}' ##{@ku.number_in_story}" %>
+				<%= "Time to edit '#{@ku.story.title}' ##{@ku.number_in_story}" %>
 			</td>
 		</tr>
     <tr>
@@ -18,7 +18,7 @@
     
     <tr>
       <td style="font-size:14px;padding-top:10px;padding-left:5px;padding-right:5px;text-align:center;">
-        Your writing deserves to shine. Let's see how <%= link_to "'#{@ku.story.title}'  ##{@ku.number_in_story}", ku_url(@ku, :utm_source => "appmailer", :utm_medium => "email", :utm_campaign => "edit_ku") %> can be polished to perfection.
+        Your writing deserves to shine. See how <%= link_to "'#{@ku.story.title} ##{@ku.number_in_story}'", ku_url(@ku, :utm_source => "appmailer", :utm_medium => "email", :utm_campaign => "edit_ku") %> can be polished to perfection.
         <br><br>
         - Team Smileku
       </td>
