--- a/app/views/app_mailer/password_reset_email.html.erb
+++ b/app/views/app_mailer/password_reset_email.html.erb
@@ -1,7 +1,8 @@
-Hi <%= @user.username %>,
-<br><br>
+<div style="font-weight: bold; font-size: 18px; line-height: 24px; color: #D03C0F">
+Hi <%= @user.username %>, sorry about the password trouble...
+</div><br>
 
-Sorry you've been having trouble logging into Smileku.  Please click the link below to reset your password:
+Please click the link below to reset your password:
 <br><br>
 
 <div style="font-weight: bold; font-size: 18px; line-height: 24px; color: #D03C0F">
