update edit email template

--- a/app/views/story_mailer/edit_ku_email.html.erb
+++ b/app/views/story_mailer/edit_ku_email.html.erb
@@ -2,12 +2,12 @@
 	<tbody>
     <tr>
       <td style="font-size:11px;font-weight:italic;">
-        <%= link_to "Visit Your Ku", ku_url(@ku, :utm_source => "appmailer", :utm_medium => "email", :utm_campaign => "edit_ku") %>
+        <%= link_to "Edit Your Ku!", ku_url(@ku, :utm_source => "appmailer", :utm_medium => "email", :utm_campaign => "edit_ku") %>
       </td>
     </tr>
 		<tr>
 			<td style="font-weight: bold; font-size: 16px; line-height: 24px; color: #D03C0F">
-				<%= "Time to edit '#{@ku.story.title}' ##{@ku.number_in_story}" %>
+				<%= "First Drafts Are Just The Beginning - Time to edit '#{@ku.story.title}' ##{@ku.number_in_story}" %>
 			</td>
 		</tr>
     <tr>
@@ -17,7 +17,9 @@
     </tr>
     
     <tr>
-      <td style="font-size:14px;padding-top:10px;padding-left:5px;padding-right:5px;text-align:center;">
+      <td style="font-size:14px;padding-top:10px;padding-left:5px;padding-right:5px;">
+        While Smileku stories are collaborative efforts, each writer is responsible for her or his own work. Editing improves the quality of reading on the site. Plus, your work will have more chances to be read and receive feedback. With a fresh perspective, it’s a good time to come back for edits.
+        <br><br>
         Your writing deserves to shine. See how <%= link_to "'#{@ku.story.title} ##{@ku.number_in_story}'", ku_url(@ku, :utm_source => "appmailer", :utm_medium => "email", :utm_campaign => "edit_ku") %> can be polished to perfection.
         <br><br>
         - Team Smileku
