--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -3,7 +3,7 @@
   .col-md-8
     %a= link_to('About', faq_path) + " &bull;".html_safe
     %a= link_to('Writing Tips', posts_path) + " &bull;".html_safe
-    %a= link_to('Terms', '#') + " &bull;".html_safe
-    %a= link_to('Contact', '/contact')
+    %a= link_to('Terms', terms_path) + " &bull;".html_safe
+    %a= link_to('Contact', contact_path)
   .col-md-4
     %p.pull-right © 2013 Smileku
