changed front headline

--- a/app/views/statics/front.html.haml
+++ b/app/views/statics/front.html.haml
@@ -2,7 +2,7 @@
 	.row
 		.col-md-6.front-left
 			%h1.giant Smileku
-			%h1 Short bursts of creativity <br/> to help you write more <br/> and grow as a writer
+			%h1 Short bursts of creativity <br> that turn into stories
 		.col-md-4.col-md-offset-1.front-right
 			- if logged_in?
 				= link_to "Start a story", new_story_path, class: "btn btn-info btn-large btn-block"
