changed blog sidebar message

--- a/app/views/posts/_sidebar.html.haml
+++ b/app/views/posts/_sidebar.html.haml
@@ -11,9 +11,9 @@
 					= link_to "Start a story!", new_story_path, class: "btn btn-info"
 		- else
 			%h2 What is Smileku?
-			.p We're a community of writers dedicated to growing creatively. Writers on Smileku collaborate on stories, challenging each other to think on our feet and write great stories.  
+			.p We're a group of writers dedicated to communal stories. Any writer is free to submit sections, known as kus, to a story. Readers vote and comment on their favorite kus which forms the main storyline.  
 			%br
-			.p Smileku is open to writers of all background.  If this sounds like fun, join us!
+			.p Smileku invites all writers to help us improve our stories, whether you write many, one or even just read.
 			%br
 			.row
 				.center
