started activity partials

--- a/app/views/statics/home.html.haml
+++ b/app/views/statics/home.html.haml
@@ -6,13 +6,10 @@
         .start_a_story{:onclick => "window.location='stories/new';", :style => "cursor: pointer;"}
           %h3 Are you a writer? Click here to start a story.
       .row
-        %h2 Recent Kus
-        - @kus.each do |k|
+        %h2 Recent Activity
+        - @activities.each do |a|
           .row
-            .col-md-1
-              %h5= link_to image_tag("#{k.cover_preview}", class: "story_image"), ku_path(k)
-            .col-md-10.row10
-              %p= "#{link_to k.strip_body.truncate(180), ku_path(k)} written #{time_ago_in_words(k.created_at)} ago".html_safe
+            = render "activities/#{a.action}", activity: a
           %hr.short-hr
       .row
         %h2 Recent Stories
