--- a/app/views/posts/_sidebar.html.haml
+++ b/app/views/posts/_sidebar.html.haml
@@ -8,16 +8,16 @@
 			%br
 			.row
 				.center
-					= link_to "Start a story!", new_story_path, class: "btn btn-info"
+					= link_to "Start a Story", new_story_path, class: "btn btn-info"
 		- else
 			%h2 What is Smileku?
-			.p We're a group of writers dedicated to communal stories. Any writer is free to submit sections, known as kus, to a story. Readers vote and comment on their favorite kus which forms the main storyline.  
+			.p We're a group of writers dedicated to communal stories. Story sections, known as kus, can be written by anyone at any point in a story. Readers vote and comment on their favorite kus which shapes how stories are read.
 			%br
-			.p Smileku invites all writers to help us improve our stories, whether you write many, one or even just read.
+			.p We're open to all writers to help us improve our stories, whether you write many, one or are just here to read.
 			%br
 			.row
 				.center
-					= link_to "Join the community!", registration_path, class: "btn btn-info"
+					= link_to "Join Us", registration_path, class: "btn btn-info"
 		%br
 		.center
 			= render 'layouts/twitter_follow'
